--- a/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
@@ -6,9 +6,10 @@
     </div>
     <div id="entity-div-create">
         <form class="form-group">
-            
+
             <div class="alert alert-info alert-dismissible show" role="alert">
-                <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong><small> : primário (<strong>único</strong>) em todo o sistema</small>
+                <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong><small> : primário (<strong>único</strong>) em
+                    todo o sistema</small>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
 
@@ -21,11 +22,13 @@
             <div class="mb-4 " style="display: none;" id="entity-div-input-namespace">
 
                 <div class="alert alert-info alert-dismissible show" role="alert">
-                    <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Namespace</strong><small> : id[entidade], crdate e isactive são criados em todas as tabelas por padrão</small>
+                    <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Namespace</strong><small> : id[entidade], crdate e
+                        isactive são criados em todas as tabelas por padrão</small>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
-                <label for="entity-namespace" class="label mb-1 text-secondary"><i class="bi bi-tags"></i>&nbsp;Namespace</label>
+                <label for="entity-namespace" class="label mb-1 text-secondary"><i
+                        class="bi bi-tags"></i>&nbsp;Namespace</label>
                 <textarea class="form-control" style="height: 5rem;" id="entity-input-namespace"
                     placeholder="// #issue: analisar o namespace de todo sistema">
 nome, email, celular, senha</textarea>
@@ -34,7 +37,9 @@ nome, email, celular, senha</textarea>
             <div class="mb-4" style="display: none;" id="entity-div-input-fields">
 
                 <div class="alert alert-info alert-dismissible show" role="alert">
-                    <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Table</strong><small> : configura a privacidade, tipo, tamanho e Null: o campo não é obrigatório; <i class="bi bi-search"></i>: permite busca </small>
+                    <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Table</strong><small> : configura a privacidade,
+                        tipo, tamanho e Null: o campo não é obrigatório; <i class="bi bi-search"></i>: permite busca
+                    </small>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
 
@@ -104,18 +109,17 @@ nome, email, celular, senha</textarea>
                     "namespace": document.getElementById('entity-input-namespace'),
                     "tBodyFields": document.getElementById('entity-fields-tbody')
                 }
+
             }
-                , div = dom.div
-                , input = dom.input
                 , enterPressed = false
                 , nameIsValid = false
                 , namespaceIsValid = false
 
-            div.main.style.display = 'block'
-            div.create.style.display = 'block'
-            div.input.name.style.display = 'block'
-            input.name.focus()
-            input.name.addEventListener('keypress', (event) => {
+            dom.div.main.style.display = 'block'
+            dom.div.create.style.display = 'block'
+            dom.div.input.name.style.display = 'block'
+            dom.input.name.focus()
+            dom.input.name.addEventListener('keypress', (event) => {
 
                 enterPressed = event.charCode === 13
 
@@ -126,13 +130,13 @@ nome, email, celular, senha</textarea>
 
                     // #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado
                     // #issue: não sei usar regex em 202109140107
-                    nameIsValid = input.name.value.length > 3
+                    nameIsValid = dom.input.name.value.length > 3
 
                     if (nameIsValid) {
 
-                        div.input.namespace.style.display = 'block'
-                        input.namespace.focus()
-                        input.namespace.addEventListener('keypress', (event) => {
+                        dom.div.input.namespace.style.display = 'block'
+                        dom.input.namespace.focus()
+                        dom.input.namespace.addEventListener('keypress', (event) => {
 
                             enterPressed = event.charCode === 13
 
@@ -142,18 +146,19 @@ nome, email, celular, senha</textarea>
                                 enterPressed = false
 
                                 // #issue: não sei usar regex em 202109140107
-                                namespaceIsValid = input.namespace.value.length >= 3
+                                namespaceIsValid = dom.input.namespace.value.length >= 3
 
                                 if (namespaceIsValid) {
 
-                                    div.input.fields.style.display = 'block'
+                                    dom.div.input.fields.style.display = 'block'
 
                                     try {
 
-                                        let namespaceValue = input.namespace.value
+                                        let namespaceValue = dom.input.namespace.value
                                             , arrNamespace = namespaceValue.split(',')
 
                                         input.tBodyFields.innerHTML = helperTbody(arrNamespace)
+                                        
 
                                     } catch (err) {
 
@@ -163,11 +168,11 @@ nome, email, celular, senha</textarea>
 
                                 } else {
 
-                                    div.input.fields.innerHTML = ''
-                                    input.namespace.value = ''
-                                    div.input.namespace.style.display = 'none'
-                                    div.input.fields.style.display = 'none'
-                                    input.name.focus()
+                                    dom.div.input.fields.innerHTML = ''
+                                    dom.input.namespace.value = ''
+                                    dom.div.input.namespace.style.display = 'none'
+                                    dom.div.input.fields.style.display = 'none'
+                                    dom.input.name.focus()
 
                                 }
                             }
@@ -175,9 +180,9 @@ nome, email, celular, senha</textarea>
 
                     } else {
 
-                        input.name.value = ''
-                        div.input.name.style.display = 'none'
-                        div.main.style.display = 'none'
+                        dom.input.name.value = ''
+                        dom.div.input.name.style.display = 'none'
+                        dom.div.main.style.display = 'none'
 
                     }
                 }
