--- a/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
@@ -92,7 +92,7 @@ nome, email, celular, senha</textarea>
 
             event.preventDefault()
 
-            // this namespace
+           // Boa prática armazenar os elementos manipulados pelo app
             let dom = {
 
                 "div": {
@@ -112,6 +112,7 @@ nome, email, celular, senha</textarea>
                 }
 
             }
+                // #issue: trocar evento enter por click num botão    
                 , enterPressed = false
                 , nameIsValid = false
                 , namespaceIsValid = false
@@ -122,6 +123,7 @@ nome, email, celular, senha</textarea>
             dom.input.name.focus()
             dom.input.name.addEventListener('keypress', (event) => {
 
+                // #issue: trocar evento enter por click num botão
                 enterPressed = event.charCode === 13
 
                 if (enterPressed) {
@@ -135,10 +137,14 @@ nome, email, celular, senha</textarea>
 
                     if (nameIsValid) {
 
+
+                        dom.div.input.name.innerHTML = `<span class="text-success fw-bold"><i class="bi bi-box-seam"></i>&nbsp;Nome</label> : <strong>${dom.input.name.value}</strong></span>`
+
                         dom.div.input.namespace.style.display = 'block'
                         dom.input.namespace.focus()
                         dom.input.namespace.addEventListener('keypress', (event) => {
 
+                            // #issue: trocar evento enter por click num botão
                             enterPressed = event.charCode === 13
 
                             if (enterPressed) {
@@ -160,43 +166,20 @@ nome, email, celular, senha</textarea>
 
                                         dom.input.tBodyFields.innerHTML = helperTbody(arrNamespace)
 
-                                        let selectPrivacy = document.getElementsByClassName('select-privacy')
-                                            , selectType = document.getElementsByClassName('select-type')
-                                            , inputLength = document.getElementsByClassName('input-length')
-                                            , inputNullable = document.getElementsByClassName('input-nullable')
-                                            , inputSearceable = document.getElementsByClassName('input-searcheable')
-                                            , values = []
+                                        let values = Values({
 
-                                        for (field = 0; field < arrNamespace.length; field++) {
+                                            arrNamespace: arrNamespace,
+                                            selectPrivacy: document.getElementsByClassName('select-privacy'),
+                                            selectType: document.getElementsByClassName('select-type'),
+                                            inputLength: document.getElementsByClassName('input-length'),
+                                            inputNullable: document.getElementsByClassName('input-nullable'),
+                                            inputSearceable: document.getElementsByClassName('input-searcheable')
 
-                                            selectType[field].addEventListener('change', event => {
+                                        })
 
-                                                event.preventDefault()
-                                                console.log(event)
-
-                                            })
-
-                                            inputLength[field].addEventListener('change', event => {
-
-                                                event.preventDefault()
-                                                console.log(event)
-
-                                            })
-
-                                            values.push({
-                                                field: arrNamespace[field],
-                                                value: 
-                                                {
-                                                    selectPrivacy: selectPrivacy[field].options[selectPrivacy[field].selectedIndex].value,
-                                                    selectType: selectType[field].options[selectType[field].selectedIndex].value,
-                                                    inputLength: inputLength[field].value,
-                                                    inputNullable: inputNullable[field].value,
-                                                    inputSearceable: inputSearceable[field].value
-                                                }
-                                            })
-                                        }
-
-                                        validatedValues(values)
+                                        // #issue: tenho tudo que preciso em values, aplicar a regra de negócio
+                                        // estou ouvindo change em todos os objetos 
+                                        console.log(values)
 
                                     } catch (err) {
 
@@ -210,8 +193,11 @@ nome, email, celular, senha</textarea>
                                     dom.input.namespace.value = ''
                                     dom.div.input.namespace.style.display = 'none'
                                     dom.div.input.fields.style.display = 'none'
+                                    dom.div.input.name.innerHTML = `<label for="entity-input-text-name" class="label mb-1 text-secondary"><i class="bi bi-box"></i>&nbsp;Nome</label>
+                                                                    <input type="text" class="form-control" id="entity-input-name" value="pessoa" 
+                                                                    placeholder = "// #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado" >`
+                                    // #issue: trocar evento enter por click num botão
                                     dom.input.name.focus()
-
                                 }
                             }
                         })
@@ -280,10 +266,83 @@ nome, email, celular, senha</textarea>
             return tbodyFieldsHtml.join('')
         }
 
-        function validatedValues(values) {
+        function Values(params) {
 
-            console.log(values)
-            
+            // #issue: Values não precisa a conhecer o conteúdo de params, está tudo em obj
+            // uma vez que eles já estão em obj
+            let obj = Object.entries(params)
+            .map(param => { 
+
+                return { key: param[0], value: param[1] }
+
+             })
+             
+            let valueOf = []
+                // #issue: Values não precisa a conhecer o conteúdo de params, está tudo em obj
+                , arrNamespace = params.arrNamespace
+                , selectPrivacy = params.selectPrivacy
+                , selectType = params.selectType
+                , inputLength = params.inputLength
+                , inputNullable = params.inputNullable
+                , inputSearceable = params.inputSearceable
+
+            for (field = 0; field < arrNamespace.length; field++) {
+
+                selectPrivacy[field].addEventListener('change', event => {
+
+                    event.preventDefault()
+                    // #issue: pensar melhor
+                    console.log(event)
+
+                })
+
+                selectType[field].addEventListener('change', event => {
+
+                    event.preventDefault()
+                    // #issue: pensar melhor
+                    console.log(event)
+
+                })
+
+                inputLength[field].addEventListener('change', event => {
+
+                    event.preventDefault()
+                    // #issue: pensar melhor
+                    console.log(event)
+
+                })
+
+                inputNullable[field].addEventListener('change', event => {
+
+                    event.preventDefault()
+                    // #issue: pensar melhor
+                    console.log(event)
+
+                })
+
+                inputSearceable[field].addEventListener('change', event => {
+
+                    event.preventDefault()
+                    // #issue: pensar melhor
+                    console.log(event)
+
+                })
+
+                valueOf.push({
+                    field: arrNamespace[field],
+                    values: {
+                        selectPrivacy: selectPrivacy[field].options[selectPrivacy[field].selectedIndex].value,
+                        selectType: selectType[field].options[selectType[field].selectedIndex].value,
+                        inputLength: inputLength[field].value,
+                        inputNullable: inputNullable[field].value,
+                        inputSearceable: inputSearceable[field].value
+                    }
+                })
+
+            }
+
+            return valueOf
+
         }
 
     })()
