--- a/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
@@ -49,11 +49,11 @@ nome, email, celular, senha</textarea>
                     <table class="table table-hover">
                         <thead>
                             <th class="text-left">Nome</th>
-                            <th class="text-center" style="width: 8rem;">Privacidade&nbsp;<i
+                            <th class="text-center" style="width: 12rem;">Privacidade&nbsp;<i
                                     class="bi bi-lock-fill"></i>
                             </th>
-                            <th class="text-center" style="width: 8rem;">Tipo</th>
-                            <th class="text-center" style="width: 8rem;">Tamanho</th>
+                            <th class="text-center" style="width: 12rem;">Tipo</th>
+                            <th class="text-center" style="width: 12rem;">Tamanho</th>
                             <th class="text-left" style="width: 2.5rem;">Null</th>
                             <th class="text-left fw-bold" style="width: 2.5rem;"><i class="bi bi-search"></i></th>
                         </thead>
@@ -84,267 +84,7 @@ nome, email, celular, senha</textarea>
     </div>
 
 </div>
-<script>
-
-    (() => {
-
-        document.getElementById('entity-btn-add').addEventListener('click', (event) => {
-
-            event.preventDefault()
-
-           // Boa prática armazenar os elementos manipulados pelo app
-            let dom = {
-
-                "div": {
-                    "main": document.getElementById('entity-div'),
-                    "create": document.getElementById('entity-div-create'),
-                    "input": {
-                        "name": document.getElementById('entity-div-input-name'),
-                        "namespace": document.getElementById('entity-div-input-namespace'),
-                        "fields": document.getElementById('entity-div-input-fields')
-                    }
-                },
-
-                "input": {
-                    "name": document.getElementById('entity-input-name'),
-                    "namespace": document.getElementById('entity-input-namespace'),
-                    "tBodyFields": document.getElementById('entity-fields-tbody')
-                }
-
-            }
-                // #issue: trocar evento enter por click num botão    
-                , enterPressed = false
-                , nameIsValid = false
-                , namespaceIsValid = false
-
-            dom.div.main.style.display = 'block'
-            dom.div.create.style.display = 'block'
-            dom.div.input.name.style.display = 'block'
-            dom.input.name.focus()
-            dom.input.name.addEventListener('keypress', (event) => {
-
-                // #issue: trocar evento enter por click num botão
-                enterPressed = event.charCode === 13
-
-                if (enterPressed) {
-
-                    event.preventDefault()
-                    enterPressed = false
-
-                    // #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado
-                    // #issue: não sei usar regex em 202109140107
-                    nameIsValid = dom.input.name.value.length > 3
-
-                    if (nameIsValid) {
-
-
-                        dom.div.input.name.innerHTML = `<span class="text-success fw-bold"><i class="bi bi-box-seam"></i>&nbsp;Nome</label> : <strong>${dom.input.name.value}</strong></span>`
-
-                        dom.div.input.namespace.style.display = 'block'
-                        dom.input.namespace.focus()
-                        dom.input.namespace.addEventListener('keypress', (event) => {
-
-                            // #issue: trocar evento enter por click num botão
-                            enterPressed = event.charCode === 13
-
-                            if (enterPressed) {
-
-                                event.preventDefault()
-                                enterPressed = false
-
-                                // #issue: não sei usar regex em 202109140107
-                                namespaceIsValid = dom.input.namespace.value.length >= 3
-
-                                if (namespaceIsValid) {
-
-                                    dom.div.input.fields.style.display = 'block'
-
-                                    try {
-
-                                        let namespaceValue = dom.input.namespace.value
-                                            , arrNamespace = namespaceValue.split(',')
-
-                                        dom.input.tBodyFields.innerHTML = helperTbody(arrNamespace)
-
-                                        let values = Values({
-
-                                            arrNamespace: arrNamespace,
-                                            selectPrivacy: document.getElementsByClassName('select-privacy'),
-                                            selectType: document.getElementsByClassName('select-type'),
-                                            inputLength: document.getElementsByClassName('input-length'),
-                                            inputNullable: document.getElementsByClassName('input-nullable'),
-                                            inputSearceable: document.getElementsByClassName('input-searcheable')
-
-                                        })
-
-                                        // #issue: tenho tudo que preciso em values, aplicar a regra de negócio
-                                        // estou ouvindo change em todos os objetos 
-                                        console.log(values)
-
-                                    } catch (err) {
-
-                                        alert('Erro', err, 'danger')
-
-                                    }
-
-                                } else {
-
-                                    dom.div.input.fields.innerHTML = ''
-                                    dom.input.namespace.value = ''
-                                    dom.div.input.namespace.style.display = 'none'
-                                    dom.div.input.fields.style.display = 'none'
-                                    dom.div.input.name.innerHTML = `<label for="entity-input-text-name" class="label mb-1 text-secondary"><i class="bi bi-box"></i>&nbsp;Nome</label>
-                                                                    <input type="text" class="form-control" id="entity-input-name" value="pessoa" 
-                                                                    placeholder = "// #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado" >`
-                                    // #issue: trocar evento enter por click num botão
-                                    dom.input.name.focus()
-                                }
-                            }
-                        })
-
-                    } else {
-
-                        dom.input.name.value = ''
-                        dom.div.input.name.style.display = 'none'
-                        dom.div.main.style.display = 'none'
-
-                    }
-                }
-            }
-            )
-        })
-
-        function helperTbody(arrNamespace) {
-
-            let fieldname = ''
-                , tbodyFieldsHtml = []
-
-
-            for (i = 0; i < arrNamespace.length; i++) {
-
-                fieldname = arrNamespace[i].toLowerCase().trim()
-
-                tbodyFieldsHtml.push(`<tr>
-                                        <td>
-                                            <input class="form-control" type="text" id="field-${fieldname}-name-input" entityfieldformtype="text" value="${fieldname}" readonly>
-                                        </td>
-                                        <td class="text-center" entityfieldformtype="select">
-                                            <select class="form-select select-privacy" aria-label="lgpd" id="field-${fieldname}-privacy">
-                                                <option value="">Dado:</option>
-                                                <option value="pessoal">Pessoal</option>
-                                                <option value="comercial">Comercial</option>
-                                                <option value="sensivel">Sensível</option>
-                                                <option value="publico">Público</option>
-                                                <option value="anomatizado">Anonimizado</option>
-                                            </select>
-                                        </td>
-                                        <td class="text-center" entityfieldformtype="select">
-                                            <select class="form-select select-type" aria-label="lgpd" id="field-${fieldname}-type">
-                                                <option value="">Tipo:</option>
-                                                <option value="number">Número</option>
-                                                <option value="string">Texto</option>
-                                                <option value="date">Data</option>
-                                                <option value="boolean">Booleano</option>
-                                            </select>
-                                        </td>
-                                        <td class="text-center" entityfieldformtype="number">
-                                        <input type="number" class="form-control input-length" id="field-${fieldname}-length" value="" readonly>
-                                        </td>
-                                        <td class="text-left mr-o pr-0">
-                                            <div class="form-check form-switch pr-0 mr-0 align-middle">
-                                                <input class="form-check-input input-nullable" type="checkbox" id="field-${fieldname}-nullable=input" entityfieldformtype="checkbox">
-                                            </div>
-                                        </td>
-                                        <td class="text-center" id="field-${fieldname}-searcheble">
-                                            <div class="form-check form-switch pr-0 mr-0 align-middle">
-                                                <input class="form-check-input input-searcheable" type="checkbox" id="field-${fieldname}-searcheble=input" entityfieldformtype="checkbox">
-                                            </div>
-                                        </td>
-                                    </tr>`)
-            }
-
-            return tbodyFieldsHtml.join('')
-        }
-
-        function Values(params) {
-
-            // #issue: Values não precisa a conhecer o conteúdo de params, está tudo em obj
-            // uma vez que eles já estão em obj
-            let obj = Object.entries(params)
-            .map(param => { 
-
-                return { key: param[0], value: param[1] }
-
-             })
-             
-            let valueOf = []
-                // #issue: Values não precisa a conhecer o conteúdo de params, está tudo em obj
-                , arrNamespace = params.arrNamespace
-                , selectPrivacy = params.selectPrivacy
-                , selectType = params.selectType
-                , inputLength = params.inputLength
-                , inputNullable = params.inputNullable
-                , inputSearceable = params.inputSearceable
-
-            for (field = 0; field < arrNamespace.length; field++) {
-
-                selectPrivacy[field].addEventListener('change', event => {
-
-                    event.preventDefault()
-                    // #issue: pensar melhor
-                    console.log(event)
-
-                })
-
-                selectType[field].addEventListener('change', event => {
-
-                    event.preventDefault()
-                    // #issue: pensar melhor
-                    console.log(event)
-
-                })
-
-                inputLength[field].addEventListener('change', event => {
-
-                    event.preventDefault()
-                    // #issue: pensar melhor
-                    console.log(event)
-
-                })
-
-                inputNullable[field].addEventListener('change', event => {
-
-                    event.preventDefault()
-                    // #issue: pensar melhor
-                    console.log(event)
-
-                })
-
-                inputSearceable[field].addEventListener('change', event => {
-
-                    event.preventDefault()
-                    // #issue: pensar melhor
-                    console.log(event)
-
-                })
-
-                valueOf.push({
-                    field: arrNamespace[field],
-                    values: {
-                        selectPrivacy: selectPrivacy[field].options[selectPrivacy[field].selectedIndex].value,
-                        selectType: selectType[field].options[selectType[field].selectedIndex].value,
-                        inputLength: inputLength[field].value,
-                        inputNullable: inputNullable[field].value,
-                        inputSearceable: inputSearceable[field].value
-                    }
-                })
-
-            }
-
-            return valueOf
-
-        }
-
-    })()
-
-</script>
+<script src="assets/javascript/tools/utils/entityCreate.js"></script>
+<script src="assets/javascript/tools/utils/helperTbody.js"></script>
+<script src="assets/javascript/tools/utils/value.js"></script>
+<script src="assets/javascript/tools/utils/eventHandler.js"></script>
