--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -11,21 +11,35 @@
         </div>
         <div class="container-fluid">
             <ul class="nav nav-tabs" id="nav-bar" role="tablist">
+                
+                <style>
+                    .dock{
+                        color: white;
+                    }
+                </style>
+                
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop" type="button" role="tab" aria-controls="nav-desktop" aria-selected="true">
-            <i class="bi bi-person-circle"></i>
-          </button>
+                    <button class="nav-link active dock" id="nav-desktop-tab" data-bs-toggle="tab"
+                        data-bs-target="#nav-desktop" type="button" role="tab" aria-controls="nav-desktop"
+                        aria-selected="true">
+                        <i class="bi bi-person-circle"></i>
+                    </button>
                 </li>
+                
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps" type="button" role="tab" aria-controls="nav-apps" aria-selected="false">
-            <i class="bi bi-grid"></i>
-          </button>
+                    <button class="nav-link dock" id="nav-apps-tab" data-bs-toggle="tab" data-bs-target="#nav-apps"
+                        type="button" role="tab" aria-controls="nav-apps" aria-selected="false">
+                        <i class="bi bi-grid"></i>
+                    </button>
                 </li>
+                
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools" type="button" role="tab" aria-controls="nav-tools" aria-selected="false">
-            <i class="bi bi-gear"></i>
-          </button>
+                    <button class="nav-link dock" id="nav-tools-tab" data-bs-toggle="tab" data-bs-target="#nav-tools"
+                        type="button" role="tab" aria-controls="nav-tools" aria-selected="false">
+                        <i class="bi bi-gear"></i>
+                    </button>
                 </li>
+
             </ul>
         </div>
         <div class="px-3">
@@ -33,7 +47,8 @@
         </div>
         <div>
             <div class="form-check form-switch text-warning">
-                <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox" checked /><i class="bi bi-shield-shaded"></i>
+                <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts"
+                    entityfieldformtype="checkbox" checked /><i class="bi bi-shield-shaded"></i>
             </div>
         </div>
     </div>
