--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -54,9 +54,9 @@
                             aria-selected="true"><i class="bi bi-ui-radios"></i></button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="nav-code-entitysql-tab" data-bs-toggle="tab"
-                            data-bs-target="#nav-code-entitysql" type="button" role="tab"
-                            aria-controls="nav-code-entitysql" aria-selected="false"><i
+                        <button class="nav-link" id="nav-code-json-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-code-json" type="button" role="tab"
+                            aria-controls="nav-code-json" aria-selected="false"><i
                                 class="bi bi-code-square"></i></button>
                     </li>
                     <li class="nav-item" role="presentation">
@@ -76,7 +76,10 @@
                                                 class="bi bi-lock-fill"></i></th>
                                         <th class="text-center" style="width: 10rem">Tipo</th>
                                         <th class="text-center" style="width: 8rem">Tamanho</th>
-                                        <th class="text-left" style="width: 2.5rem">Opcional</th>
+                                        <th class="text-left" style="width: 2.5rem">null</th>
+                                        <th class="text-left fw-bold" style="width: 2.5rem">
+                                            hash
+                                        </th>
                                         <th class="text-left fw-bold" style="width: 2.5rem">
                                             <i class="bi bi-search"></i>
                                         </th>
@@ -86,8 +89,8 @@
                             </table>
                         </div>
                     </div>
-                    <div class="tab-pane" id="nav-code-entitysql" role="tabpanel"
-                        aria-labelledby="nav-code-entitysql-tab">
+                    <div class="tab-pane" id="nav-code-json" role="tabpanel"
+                        aria-labelledby="nav-code-json-tab">
                         <div class="table-responsive">
                             <table class="table table-hover">
                                 <thead>
@@ -95,7 +98,7 @@
                                         <th class="text-left">Json</th>
                                     </tr>
                                 </thead>
-                                <tbody id="entity-entitysql"></tbody>
+                                <tbody id="entity-json"></tbody>
                             </table>
                         </div>
                     </div>
