--- a/views/blocks/aes-help-dock.ejs
+++ b/views/blocks/aes-help-dock.ejs
@@ -1,9 +1,19 @@
-<div class="offcanvas offcanvas-end text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel" 
-style="background-image: url('assets/images/bg-aes-help.svg');  background-size: cover; background-color: #6083cf; border-top: 1px solid #ff9500; border-bottom: 1px solid #ff9500; width: 600px !important; opacity: .75;">
+<div class="offcanvas offcanvas-end text-white" tabindex="-1" id="aes-help-dock" aria-labelledby="aes-helpLabel"
+    style="background-image: url('assets/images/bg-aes-help.svg');  background-size: cover; background-color: #6083cf; border-top: 1px solid #ff9500; border-bottom: 1px solid #ff9500; width: 600px !important; opacity: .75;">
     <div class="offcanvas-header">
-        <a href="#" class="a text-white" data-bs-dismiss="offcanvas" aria-label="Close"><i class="bi bi-x-circle"></i></a>
+        <a href="#" class="a text-white" data-bs-dismiss="offcanvas" aria-label="Close"><i
+                class="bi bi-x-circle"></i></a>
     </div>
     <div class="offcanvas-body">
-        
+
     </div>
+</div>
+
+<div class="offcanvas offcanvas-end text-white" tabindex="-1" id="aes-help-context" aria-labelledby="aes-helpLabel"
+    style="background-image: url('assets/images/bg-aes-help.svg');  background-size: cover; background-color: #6083cf; border-top: 1px solid #ff9500; border-bottom: 1px solid #ff9500; width: 600px !important; opacity: .75;">
+    <div class="offcanvas-header">
+        <a href="#" class="a text-white" data-bs-dismiss="offcanvas" aria-label="Close"><i
+                class="bi bi-x-circle"></i></a>
+    </div>
+    <div class="offcanvas-body" id="aes-help-context"></div>
 </div>
