--- a/views/framework/tools/entity/entity-create-inc.ejs
+++ b/views/framework/tools/entity/entity-create-inc.ejs
@@ -117,6 +117,7 @@
         </form>
     </div>
 </div>
+<script src="assets/javascript/framework/tools/entity/create/observer.js "></script>
 <script src="assets/javascript/framework/tools/entity/create/pretty.js "></script>
 <script src="assets/javascript/framework/tools/entity/create/settings.js "></script>
 <script src="assets/javascript/framework/tools/entity/create/entity.js "></script>
